# fastdet.cpp

./: .clang-fromat  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  FindTensorRT.cmake  FindcuDNN.cmake  Sanitizers.cmake
include/common/: Assert.h  Logger.h  assertion.h  logging.h
include/core/: Engine.h  IEngine.h  TensorRTEngine.h
include/detector/: IDetector.h  YOLOv8.h
include/inference/: EngineFactory.h  IEngine.h  TensorRTEngine.h
src/: CMakeLists.txt  main.cpp
src/common/: Logger.cpp  logging.cpp
src/core/: Engine.cpp  TensorRTEngine.cpp
src/detector/: YOLOv8.cpp
src/inference/: EngineFactory.cpp  TensorRTEngine.cpp
